add check identical

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 **/brokenAccessControl/hijackingSessionCookie/tokens
+**/brokenAccessControl/hijackingSessionCookie/gen_token
 **/brokenAccessControl/hijackingSessionCookie/gen_cookies
 **/brokenAccessControl/hijackingSessionCookie/possibleCookie
